--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/chair1.jpeg
+    - assets/table.jpeg
+    - assets/table1.jpg
+    - lib/presentation/products_screen/chair_screen.dart
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
